force-app/main/default/objects/ETG_Repository__c/ETG_Repository__c.object-meta.xml
<CustomObject>
    <description>SF-390 -  ETG Repository

Overview: Emerging Technology Group (ETG) - is a team with in-depth competitor knowledge, they provide support to field sales with “silver bullets” to close deals against competitor. Today field sale submit requests to the ETG team via google form; to allow scalability and SLA reporting we plan to utilize OOB Case functionalities. 

In addition, ETG team provide knowledge base articles categorized by competitor. We will make this  available prior to the Case creation interface for sales users to self-help.</description>
    <label>( Deprecated ) ETG Repository</label>
    <nameField>
        <displayFormat>EtgRepo-{000}</displayFormat>
        <label>ETG Repository Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>( Deprecated ) ETG Repositories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>