force-app/main/default/objects/ETG_Repository__c/fields/Article_Description__c.field-meta.xml
<CustomField>
    <fullName>Article_Description__c</fullName>
    <description>Article Description</description>
    <inlineHelpText>Article Description</inlineHelpText>
    <label>Article Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>