force-app/main/default/objects/ETG_Repository__c/fields/Article_Label__c.field-meta.xml
<CustomField>
    <fullName>Article_Label__c</fullName>
    <description>Article Label</description>
    <inlineHelpText>Article Label</inlineHelpText>
    <label>Article Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>