force-app/main/default/objects/ETG_Repository__c/fields/Article_Link__c.field-meta.xml
<CustomField>
    <fullName>Article_Link__c</fullName>
    <description>Article Link</description>
    <inlineHelpText>Article Link</inlineHelpText>
    <label>Article Link</label>
    <type>Url</type>
</CustomField>