force-app/main/default/objects/ETG_Repository__c/fields/Primary_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Competitor__c</fullName>
    <description>Primary Competitor</description>
    <inlineHelpText>Primary Competitor</inlineHelpText>
    <label>Primary Competitor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Primary_Competitor</valueSetName>
    </valueSet>
</CustomField>