force-app/main/default/objects/ETG_Repository__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Article_Label__c</columns>
    <columns>Article_Link__c</columns>
    <columns>Primary_Competitor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>